test/compile-fail/resolution/pub/in-crate-crate/expected.txt
error: special identifier `crate` can only be in the start position of a path
  ┌─ ./test/compile-fail/resolution/pub/in-crate-crate/top.rhdl:1:15
  │
1 │ pub(in crate::crate) struct a {}
  │               ^^^^^

